fixed the flash msg so it does not break the layout

--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -2212,6 +2212,30 @@ textarea
     position: relative
     top: 2px
 
+.settings-drop
+  display: none
+  position: absolute
+  right: -3px
+  top: 53px
+  width: 168px
+  height: 59px
+  z-index: 111
+  border-radius: 5px
+  background: url(/css/images/quick-splash-formbg.png)
+  .inner
+    padding: 7px 15px
+    a
+      display: block
+      margin-bottom: 10px
+      float: right
+  .tip
+    position: absolute
+    top: -11px
+    right: 7px
+    width: 21px
+    height: 11px
+    background: url(/css/images/quick-splash-form-arrow.png) no-repeat
+
 [data-widget = "events-filter"]
   height: auto
 
